build/log/idf_py_stdout_output_63778
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/tennis/src/test-squawk/build/bootloader/esp-idf/esptool_py && /Users/tennis/.espressif/python_env/idf5.3_py3.13_env/bin/python /Users/tennis/esp/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/tennis/src/test-squawk/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj 
/Users/tennis/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/tennis/src/test-squawk/build/config -I/Users/tennis/src/test-squawk/main -I/Users/tennis/esp/esp-idf-v5.3.1/components/newlib/platform_include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/config/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/config/include/freertos -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/config/xtensa/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/esp_additions/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/include/soc -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/dma/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/. -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/heap/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/log/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/soc/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/soc/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/soc/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/hal/platform_port/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/hal/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/hal/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_rom/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_rom/include/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_rom/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_common/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_system/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_system/port/soc -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_system/port/include/private -I/Users/tennis/esp/esp-idf-v5.3.1/components/xtensa/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/xtensa/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/xtensa/deprecated_include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/include/apps -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/include/apps/sntp -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/lwip/src/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/freertos/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_driver_gpio/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_driver_i2s/include -I/Users/tennis/src/test-squawk/managed_components/espressif__esp_audio_codec/include -I/Users/tennis/src/test-squawk/managed_components/espressif__esp_audio_codec/include/decoder -I/Users/tennis/src/test-squawk/managed_components/espressif__esp_audio_codec/include/decoder/impl -I/Users/tennis/src/test-squawk/managed_components/espressif__esp_audio_codec/include/encoder -I/Users/tennis/src/test-squawk/managed_components/espressif__esp_audio_codec/include/encoder/impl -I/Users/tennis/src/test-squawk/managed_components/espressif__esp_audio_codec/include/simple_dec -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_ringbuf/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_timer/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/tennis/src/test-squawk=. -fmacro-prefix-map=/Users/tennis/esp/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj -c /Users/tennis/src/test-squawk/main/test-squawk.c
/Users/tennis/src/test-squawk/main/test-squawk.c:207:65: error: unknown type name 'audio_codec_test_cfg_t'
  207 | int audio_simple_decoder_test(esp_audio_simple_dec_type_t type, audio_codec_test_cfg_t *cfg, audio_info_t *info) {
      |                                                                 ^~~~~~~~~~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:207:94: error: unknown type name 'audio_info_t'
  207 | int audio_simple_decoder_test(esp_audio_simple_dec_type_t type, audio_codec_test_cfg_t *cfg, audio_info_t *info) {
      |                                                                                              ^~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:316:48: error: unknown type name 'codec_write_cb'
  316 | int audio_simple_decoder_test_file(char *file, codec_write_cb writer, audio_info_t *info) {
      |                                                ^~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:316:71: error: unknown type name 'audio_info_t'
  316 | int audio_simple_decoder_test_file(char *file, codec_write_cb writer, audio_info_t *info) {
      |                                                                       ^~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c: In function 'squawk':
/Users/tennis/src/test-squawk/main/test-squawk.c:339:5: error: unknown type name 'audio_info_t'
  339 |     audio_info_t info = {0};
      |     ^~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:341:5: error: implicit declaration of function 'audio_simple_decoder_test_file' [-Werror=implicit-function-declaration]
  341 |     audio_simple_decoder_test_file("/spiffs/squawk.mp3", simple_decoder_write_pcm, &info);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c: At top level:
/Users/tennis/src/test-squawk/main/test-squawk.c:190:12: warning: 'simple_decoder_read_data' defined but not used [-Wunused-function]
  190 | static int simple_decoder_read_data(uint8_t *data, int size) {
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:182:12: warning: 'encoder_read_pcm' defined but not used [-Wunused-function]
  182 | static int encoder_read_pcm(uint8_t *data, int size) {
      |            ^~~~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:180:12: warning: 'read_raw_from_file' defined but not used [-Wunused-function]
  180 | static int read_raw_from_file(uint8_t *data, int size) { return fread(data, 1, size, simp_dec_fp); }
      |            ^~~~~~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:154:13: warning: 'get_simple_decoder_config' defined but not used [-Wunused-function]
  154 | static void get_simple_decoder_config(esp_audio_simple_dec_cfg_t *cfg) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:121:36: warning: 'get_simple_decoder_type' defined but not used [-Wunused-function]
  121 | static esp_audio_simple_dec_type_t get_simple_decoder_type(char *file) {
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:57:14: warning: 'volume' defined but not used [-Wunused-variable]
   57 | static float volume = 1.0f; // Volume control (0.0 to 1.0)
      |              ^~~~~~
/Users/tennis/src/test-squawk/main/test-squawk.c:56:13: warning: 'play_audio' defined but not used [-Wunused-variable]
   56 | static bool play_audio = false;
      |             ^~~~~~~~~~
cc1: some warnings being treated as errors
[4/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
